--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -10,6 +10,9 @@ on:
 jobs:
   cypress-e2e-electron:
     runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node-20.14.0-chrome-126.0.6478.114-1-ff-127.0.1-edge-126.0.2592.61-1
+      options: --user 1001
     steps:
       - name: Get code
         uses: actions/checkout@v4.1.7
@@ -25,3 +28,49 @@ jobs:
         env:
           CYPRESS_RECORD_KEY: 98a83ed4-9f04-4d66-9433-2dcb6b2d3d2a 
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  cypress-e2e-chrome:
+    needs: cypress-e2e-electron
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node-20.14.0-chrome-126.0.6478.114-1-ff-127.0.1-edge-126.0.2592.61-1
+      options: --user 1001
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4.1.7
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v6.5.0
+        with:
+          install-command: yarn install
+          browser: chrome
+          record: true
+          group: UI Chrome
+          spec: ${{ github.event.input.spec }}
+        env:
+          CYPRESS_RECORD_KEY: 98a83ed4-9f04-4d66-9433-2dcb6b2d3d2a 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  cypress-e2e-firefox:
+    runs-on: ubuntu-latest
+    container:
+      image: cypress/browsers:node-20.14.0-chrome-126.0.6478.114-1-ff-127.0.1-edge-126.0.2592.61-1
+      options: --user 1001
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4.1.7
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v6.5.0
+        with:
+          install-command: yarn install
+          browser: firefox
+          record: true
+          group: UI Firefox
+          spec: ${{ github.event.input.spec }}
+        env:
+          CYPRESS_RECORD_KEY: 98a83ed4-9f04-4d66-9433-2dcb6b2d3d2a 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+
