--- a/.github/workflows/cypress-cloud.yml
+++ b/.github/workflows/cypress-cloud.yml
@@ -26,7 +26,7 @@ jobs:
           group: UI Electron
           spec: ${{ github.event.input.spec }}
         env:
-          CYPRESS_RECORD_KEY: 98a83ed4-9f04-4d66-9433-2dcb6b2d3d2a 
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   cypress-e2e-chrome:
@@ -48,7 +48,7 @@ jobs:
           group: UI Chrome
           spec: ${{ github.event.input.spec }}
         env:
-          CYPRESS_RECORD_KEY: 98a83ed4-9f04-4d66-9433-2dcb6b2d3d2a 
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   cypress-e2e-firefox:
@@ -69,7 +69,7 @@ jobs:
           group: UI Firefox
           spec: ${{ github.event.input.spec }}
         env:
-          CYPRESS_RECORD_KEY: 98a83ed4-9f04-4d66-9433-2dcb6b2d3d2a 
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
